--- a/PruebaCompra.html
+++ b/PruebaCompra.html
@@ -34,7 +34,7 @@
                             <a class="nav-link3 " href="#">Conviértete en orador</a>
                         </li>
                         <li class="nav-item-green">
-                            <a class="nav-link2" href="compra.html">Comprar tickets</a>
+                            <a class="nav-link2" href="PruebaCompra.html">Comprar tickets</a>
                         </li>
                     </ul>
                 </div>
